--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
   "dependencies": [],
   "codeowners": ["@rajeevan"],
   "config_flow": true,
-  "iot_class": "local_polling",
+  "iot_class": "local_push",
   "version": "0.0.1"
 }
